# QT_projects

./: README.md
20230606caja_checkbox/: dialog.cpp  dialog.h  dialog.ui
20230607radioBoton/: dialog.cpp  dialog.h  dialog.ui  main.cpp
build-1stProject_test-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-20230606caja_checkbox-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_dialog.h
build-20230607radioBoton-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_dialog.h
build-class_Qt-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-connection-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-editorTexto_boton-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-inheritance-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-input_output-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-parent_hierarchy-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-plantillas_QList_QVector-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-property_binding-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: .ninja_deps  (+5 more)
console_projects/consoleApp_test/: CMakeLists.txt  main.cpp
console_projects/qObject_test/: CMakeLists.txt  main.cpp  qobject_test.cpp  qobject_test.h
console_projects/template_no_qobject/: CMakeLists.txt  main.cpp
(+3091 files in other folders)
